Update background color styling & redeploy to GH Pages

--- a/src/pages/Contact/style.css
+++ b/src/pages/Contact/style.css
@@ -15,6 +15,10 @@ form {
     margin-right: auto;
 }
 
+body {
+    background-color: #fafafa;
+}
+
 @media screen and (max-width: 796px) {
     #contact {
         width: 75%
